--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "webgpu-samples",
+  "name": "webgpu-crowd-simulation",
   "version": "0.1.0",
   "description": "Samples using the Web GPU API",
   "license": "BSD-3-Clause",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/austinEng/webgpu-samples.git"
+    "url": "https://github.com/wayne-wu/webgpu-crowd-simulation.git"
   },
   "scripts": {
     "lint": "eslint --ext .ts,.tsx src/",
