--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "stanford-dragon": "^1.1.1",
+    "stats.js": "^0.17.0",
     "webgpu-live-shader-module": "austinEng/webgpu-live-shader-module#fb7d6cc8"
   },
   "devDependencies": {
