--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "^10.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-three-fiber": "^6.0.13",
     "stanford-dragon": "^1.1.1",
     "stats.js": "^0.17.0",
+    "three": "^0.135.0",
     "webgpu-live-shader-module": "austinEng/webgpu-live-shader-module#fb7d6cc8"
   },
   "devDependencies": {
