Try a few things to get live demo working

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      BASE_PATH: /webgpu-samples
+      BASE_PATH: /
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
